--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11250,6 +11250,10 @@ video {
   margin-left: -150px;
   margin-right: -150px;
 }
+.mx-\[30px\] {
+  margin-left: 30px;
+  margin-right: 30px;
+}
 .my-\[30px\] {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -11262,6 +11266,15 @@ video {
 }
 .flex {
   display: flex;
+}
+.w-\[200px\] {
+  width: 200px;
+}
+.flex-col {
+  flex-direction: column;
+}
+.items-center {
+  align-items: center;
 }
 .justify-center {
   justify-content: center;
@@ -11280,6 +11293,9 @@ video {
 }
 .text-center {
   text-align: center;
+}
+.text-\[24px\] {
+  font-size: 24px;
 }
 .text-\[30px\] {
   font-size: 30px;
@@ -11305,17 +11321,71 @@ video {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.duration-500 {
+  transition-duration: 500ms;
+}
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+.hover\:underline-offset-4:hover {
+  text-underline-offset: 4px;
+}
 @media (min-width: 0px) {
+
+  .sp\:my-\[30px\] {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .sp\:mt-\[10px\] {
+    margin-top: 10px;
+  }
+
+  .sp\:flex-col {
+    flex-direction: column;
+  }
+
+  .sp\:items-center {
+    align-items: center;
+  }
+
+  .sp\:text-\[24px\] {
+    font-size: 24px;
+  }
 
   .sp\:text-\[30px\] {
     font-size: 30px;
   }
 }
 @media (min-width: 897px) {
+
+  .desktop\:mt-\[40px\] {
+    margin-top: 40px;
+  }
+
+  .desktop\:mt-\[80px\] {
+    margin-top: 80px;
+  }
+
+  .desktop\:flex-row {
+    flex-direction: row;
+  }
+
+  .desktop\:flex-wrap {
+    flex-wrap: wrap;
+  }
+
+  .desktop\:justify-center {
+    justify-content: center;
+  }
+
+  .desktop\:text-\[30px\] {
+    font-size: 30px;
+  }
 
   .desktop\:text-\[60px\] {
     font-size: 60px;
