--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11258,14 +11258,30 @@ video {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+.my-\[6px\] {
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+.mb-\[150px\] {
+  margin-bottom: 150px;
+}
 .mt-\[120px\] {
   margin-top: 120px;
+}
+.mt-\[6px\] {
+  margin-top: 6px;
 }
 .block {
   display: block;
 }
 .flex {
   display: flex;
+}
+.h-\[100vh\] {
+  height: 100vh;
+}
+.w-\[100vw\] {
+  width: 100vw;
 }
 .w-\[200px\] {
   width: 200px;
@@ -11294,11 +11310,17 @@ video {
 .text-center {
   text-align: center;
 }
+.text-\[20px\] {
+  font-size: 20px;
+}
 .text-\[24px\] {
   font-size: 24px;
 }
 .text-\[30px\] {
   font-size: 30px;
+}
+.font-bold {
+  font-weight: 700;
 }
 .text-blue-600 {
   --tw-text-opacity: 1;
