--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11258,6 +11258,10 @@ video {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+.my-\[60px\] {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
 .my-\[6px\] {
   margin-top: 6px;
   margin-bottom: 6px;
