--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11254,6 +11254,10 @@ video {
   margin-left: 30px;
   margin-right: 30px;
 }
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
 .my-\[30px\] {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -11266,8 +11270,17 @@ video {
   margin-top: 6px;
   margin-bottom: 6px;
 }
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
 .mb-\[150px\] {
   margin-bottom: 150px;
+}
+.mr-2 {
+  margin-right: 0.5rem;
 }
 .mt-\[120px\] {
   margin-top: 120px;
@@ -11281,6 +11294,9 @@ video {
 .flex {
   display: flex;
 }
+.h-64 {
+  height: 16rem;
+}
 .h-\[100vh\] {
   height: 100vh;
 }
@@ -11289,6 +11305,12 @@ video {
 }
 .w-\[200px\] {
   width: 200px;
+}
+.max-w-2xl {
+  max-width: 42rem;
+}
+.flex-grow {
+  flex-grow: 1;
 }
 .flex-col {
   flex-direction: column;
@@ -11299,6 +11321,28 @@ video {
 .justify-center {
   justify-content: center;
 }
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.overflow-auto {
+  overflow: auto;
+}
+.rounded {
+  border-radius: 0.25rem;
+}
+.border {
+  border-width: 1px;
+}
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -11307,12 +11351,34 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.p-2 {
+  padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .py-\[3px\] {
   padding-top: 3px;
   padding-bottom: 3px;
 }
 .text-center {
   text-align: center;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-\[20px\] {
   font-size: 20px;
@@ -11326,9 +11392,17 @@ video {
 .font-bold {
   font-weight: 700;
 }
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 .text-red-500 {
   --tw-text-opacity: 1;
