--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11303,6 +11303,9 @@ video {
 .mr-\[5px\] {
   margin-right: 5px;
 }
+.mr-\[70px\] {
+  margin-right: 70px;
+}
 .mt-\[100px\] {
   margin-top: 100px;
 }
@@ -11330,6 +11333,9 @@ video {
 .h-\[280px\] {
   height: 280px;
 }
+.w-\[100\%\] {
+  width: 100%;
+}
 .w-\[100px\] {
   width: 100px;
 }
@@ -11341,6 +11347,9 @@ video {
 }
 .max-w-2xl {
   max-width: 42rem;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .flex-grow {
   flex-grow: 1;
@@ -11465,6 +11474,9 @@ video {
 }
 .text-center {
   text-align: center;
+}
+.text-\[16px\] {
+  font-size: 16px;
 }
 .text-\[18px\] {
   font-size: 18px;
