--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11258,6 +11258,10 @@ video {
   margin-left: 30px;
   margin-right: 30px;
 }
+.mx-\[50px\] {
+  margin-left: 50px;
+  margin-right: 50px;
+}
 .mx-\[80px\] {
   margin-left: 80px;
   margin-right: 80px;
@@ -11305,6 +11309,9 @@ video {
 }
 .mr-\[70px\] {
   margin-right: 70px;
+}
+.mr-\[80px\] {
+  margin-right: 80px;
 }
 .mt-\[100px\] {
   margin-top: 100px;
