--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11250,17 +11250,9 @@ video {
   margin-left: -150px;
   margin-right: -150px;
 }
-.mx-\[20px\] {
-  margin-left: 20px;
-  margin-right: 20px;
-}
 .mx-\[30px\] {
   margin-left: 30px;
   margin-right: 30px;
-}
-.mx-\[50px\] {
-  margin-left: 50px;
-  margin-right: 50px;
 }
 .mx-\[80px\] {
   margin-left: 80px;
@@ -11281,9 +11273,6 @@ video {
 .mb-4 {
   margin-bottom: 1rem;
 }
-.mb-\[15px\] {
-  margin-bottom: 15px;
-}
 .mb-\[20px\] {
   margin-bottom: 20px;
 }
@@ -11299,9 +11288,6 @@ video {
 .mr-\[50px\] {
   margin-right: 50px;
 }
-.mr-\[5px\] {
-  margin-right: 5px;
-}
 .mr-\[80px\] {
   margin-right: 80px;
 }
@@ -11310,9 +11296,6 @@ video {
 }
 .mt-\[120px\] {
   margin-top: 120px;
-}
-.mt-\[20px\] {
-  margin-top: 20px;
 }
 .mt-\[30px\] {
   margin-top: 30px;
@@ -11331,6 +11314,12 @@ video {
 }
 .h-\[10vh\] {
   height: 10vh;
+}
+.h-\[11vh\] {
+  height: 11vh;
+}
+.h-\[12vh\] {
+  height: 12vh;
 }
 .h-\[14vh\] {
   height: 14vh;
@@ -11353,11 +11342,14 @@ video {
 .w-\[100\%\] {
   width: 100%;
 }
-.w-\[100px\] {
-  width: 100px;
-}
 .w-\[100vw\] {
   width: 100vw;
+}
+.w-\[10vw\] {
+  width: 10vw;
+}
+.w-\[11vh\] {
+  width: 11vh;
 }
 .w-\[14vh\] {
   width: 14vh;
@@ -11373,6 +11365,9 @@ video {
 }
 .w-\[46vw\] {
   width: 46vw;
+}
+.w-\[60vw\] {
+  width: 60vw;
 }
 .w-\[85vw\] {
   width: 85vw;
@@ -11471,10 +11466,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
-.bg-blue-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
-}
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
@@ -11561,9 +11552,6 @@ video {
   padding-top: 6vh;
   padding-bottom: 6vh;
 }
-.pl-\[10px\] {
-  padding-left: 10px;
-}
 .pl-\[1vw\] {
   padding-left: 1vw;
 }
@@ -11581,12 +11569,6 @@ video {
 }
 .text-\[18px\] {
   font-size: 18px;
-}
-.text-\[20px\] {
-  font-size: 20px;
-}
-.text-\[22px\] {
-  font-size: 22px;
 }
 .text-\[24px\] {
   font-size: 24px;
@@ -11655,11 +11637,6 @@ video {
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -11700,11 +11677,6 @@ video {
 }
 @media (min-width: 0px) {
 
-  .sp\:my-\[20px\] {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
   .sp\:my-\[30px\] {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -11718,20 +11690,8 @@ video {
     margin-top: 30%;
   }
 
-  .sp\:h-\[80px\] {
-    height: 80px;
-  }
-
   .sp\:w-\[100\%\] {
     width: 100%;
-  }
-
-  .sp\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .sp\:flex-row {
-    flex-direction: row;
   }
 
   .sp\:flex-col {
@@ -11746,24 +11706,8 @@ video {
     justify-content: center;
   }
 
-  .sp\:gap-y-5 {
-    row-gap: 1.25rem;
-  }
-
-  .sp\:pr-\[10px\] {
-    padding-right: 10px;
-  }
-
   .sp\:text-center {
     text-align: center;
-  }
-
-  .sp\:text-\[16px\] {
-    font-size: 16px;
-  }
-
-  .sp\:text-\[22px\] {
-    font-size: 22px;
   }
 
   .sp\:text-\[26px\] {
@@ -11775,11 +11719,6 @@ video {
   }
 }
 @media (min-width: 897px) {
-
-  .desktop\:my-\[50px\] {
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
 
   .desktop\:mt-\[120px\] {
     margin-top: 120px;
@@ -11793,24 +11732,12 @@ video {
     margin-top: 80px;
   }
 
-  .desktop\:h-\[300px\] {
-    height: 300px;
-  }
-
-  .desktop\:w-\[200px\] {
-    width: 200px;
-  }
-
   .desktop\:w-\[350px\] {
     width: 350px;
   }
 
   .desktop\:flex-row {
     flex-direction: row;
-  }
-
-  .desktop\:flex-col {
-    flex-direction: column;
   }
 
   .desktop\:flex-wrap {
@@ -11825,24 +11752,8 @@ video {
     justify-content: space-between;
   }
 
-  .desktop\:pl-\[30px\] {
-    padding-left: 30px;
-  }
-
-  .desktop\:pr-0 {
-    padding-right: 0px;
-  }
-
   .desktop\:text-left {
     text-align: left;
-  }
-
-  .desktop\:text-\[20px\] {
-    font-size: 20px;
-  }
-
-  .desktop\:text-\[40px\] {
-    font-size: 40px;
   }
 
   .desktop\:text-\[60px\] {
