--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11254,6 +11254,18 @@ video {
   margin-left: 30px;
   margin-right: 30px;
 }
+.mx-\[3vw\] {
+  margin-left: 3vw;
+  margin-right: 3vw;
+}
+.mx-\[5vw\] {
+  margin-left: 5vw;
+  margin-right: 5vw;
+}
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 .my-\[2vh\] {
   margin-top: 2vh;
   margin-bottom: 2vh;
@@ -11284,14 +11296,8 @@ video {
 .mr-\[50px\] {
   margin-right: 50px;
 }
-.mr-\[80px\] {
-  margin-right: 80px;
-}
 .mt-\[120px\] {
   margin-top: 120px;
-}
-.mt-\[30px\] {
-  margin-top: 30px;
 }
 .block {
   display: block;
@@ -11320,8 +11326,8 @@ video {
 .h-\[15vh\] {
   height: 15vh;
 }
-.h-\[18vh\] {
-  height: 18vh;
+.h-\[16vh\] {
+  height: 16vh;
 }
 .h-\[20vh\] {
   height: 20vh;
@@ -11329,8 +11335,11 @@ video {
 .h-\[40vw\] {
   height: 40vw;
 }
-.h-\[90vh\] {
-  height: 90vh;
+.h-\[8vh\] {
+  height: 8vh;
+}
+.h-\[92vh\] {
+  height: 92vh;
 }
 .h-\[9vh\] {
   height: 9vh;
@@ -11353,8 +11362,8 @@ video {
 .w-\[15vw\] {
   width: 15vw;
 }
-.w-\[18vh\] {
-  width: 18vh;
+.w-\[16vh\] {
+  width: 16vh;
 }
 .w-\[200px\] {
   width: 200px;
@@ -11370,6 +11379,9 @@ video {
 }
 .w-\[85vw\] {
   width: 85vw;
+}
+.w-\[90vw\] {
+  width: 90vw;
 }
 .w-\[95vw\] {
   width: 95vw;
@@ -11495,6 +11507,10 @@ video {
   padding-left: 10px;
   padding-right: 10px;
 }
+.px-\[20vw\] {
+  padding-left: 20vw;
+  padding-right: 20vw;
+}
 .px-\[3vw\] {
   padding-left: 3vw;
   padding-right: 3vw;
@@ -11510,6 +11526,10 @@ video {
 .px-\[8vw\] {
   padding-left: 8vw;
   padding-right: 8vw;
+}
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -11547,14 +11567,32 @@ video {
   padding-top: 6vh;
   padding-bottom: 6vh;
 }
+.pb-\[1vh\] {
+  padding-bottom: 1vh;
+}
+.pb-\[3vh\] {
+  padding-bottom: 3vh;
+}
 .pl-\[1vw\] {
   padding-left: 1vw;
 }
 .pl-\[2vw\] {
   padding-left: 2vw;
 }
+.pl-\[3vw\] {
+  padding-left: 3vw;
+}
 .pl-\[5vw\] {
   padding-left: 5vw;
+}
+.pt-\[2vh\] {
+  padding-top: 2vh;
+}
+.pt-\[3vh\] {
+  padding-top: 3vh;
+}
+.pt-\[4vh\] {
+  padding-top: 4vh;
 }
 .text-left {
   text-align: left;
@@ -11627,6 +11665,11 @@ video {
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .filter {
