--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11246,14 +11246,6 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.mx-\[-150px\] {
-  margin-left: -150px;
-  margin-right: -150px;
-}
-.mx-\[30px\] {
-  margin-left: 30px;
-  margin-right: 30px;
-}
 .mx-\[3vw\] {
   margin-left: 3vw;
   margin-right: 3vw;
@@ -11274,15 +11266,21 @@ video {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-.my-\[3vh\] {
-  margin-top: 3vh;
-  margin-bottom: 3vh;
+.my-\[8vh\] {
+  margin-top: 8vh;
+  margin-bottom: 8vh;
 }
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mb-\[15vh\] {
+  margin-bottom: 15vh;
+}
 .mb-\[20px\] {
   margin-bottom: 20px;
+}
+.mb-\[2vh\] {
+  margin-bottom: 2vh;
 }
 .ml-\[40px\] {
   margin-left: 40px;
@@ -11298,6 +11296,12 @@ video {
 }
 .mt-\[120px\] {
   margin-top: 120px;
+}
+.mt-\[12vh\] {
+  margin-top: 12vh;
+}
+.mt-\[3vh\] {
+  margin-top: 3vh;
 }
 .block {
   display: block;
@@ -11335,14 +11339,14 @@ video {
 .h-\[40vw\] {
   height: 40vw;
 }
+.h-\[45vh\] {
+  height: 45vh;
+}
 .h-\[8vh\] {
   height: 8vh;
 }
 .h-\[92vh\] {
   height: 92vh;
-}
-.h-\[9vh\] {
-  height: 9vh;
 }
 .w-\[100\%\] {
   width: 100%;
@@ -11365,9 +11369,6 @@ video {
 .w-\[16vh\] {
   width: 16vh;
 }
-.w-\[200px\] {
-  width: 200px;
-}
 .w-\[40vw\] {
   width: 40vw;
 }
@@ -11377,17 +11378,20 @@ video {
 .w-\[60vw\] {
   width: 60vw;
 }
+.w-\[75vw\] {
+  width: 75vw;
+}
 .w-\[85vw\] {
   width: 85vw;
+}
+.w-\[8vh\] {
+  width: 8vh;
 }
 .w-\[90vw\] {
   width: 90vw;
 }
 .w-\[95vw\] {
   width: 95vw;
-}
-.w-\[9vh\] {
-  width: 9vh;
 }
 .flex-grow {
   flex-grow: 1;
@@ -11453,6 +11457,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.border-green-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
+}
 .border-red-600 {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
@@ -11485,6 +11493,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
@@ -11511,6 +11523,10 @@ video {
   padding-left: 20vw;
   padding-right: 20vw;
 }
+.px-\[2vw\] {
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
 .px-\[3vw\] {
   padding-left: 3vw;
   padding-right: 3vw;
@@ -11518,10 +11534,6 @@ video {
 .px-\[5vw\] {
   padding-left: 5vw;
   padding-right: 5vw;
-}
-.px-\[70px\] {
-  padding-left: 70px;
-  padding-right: 70px;
 }
 .px-\[8vw\] {
   padding-left: 8vw;
@@ -11543,9 +11555,9 @@ video {
   padding-top: 1vh;
   padding-bottom: 1vh;
 }
-.py-\[3px\] {
-  padding-top: 3px;
-  padding-bottom: 3px;
+.py-\[2vh\] {
+  padding-top: 2vh;
+  padding-bottom: 2vh;
 }
 .py-\[3vh\] {
   padding-top: 3vh;
@@ -11600,23 +11612,23 @@ video {
 .text-center {
   text-align: center;
 }
+.text-\[10vw\] {
+  font-size: 10vw;
+}
 .text-\[16px\] {
   font-size: 16px;
 }
-.text-\[28px\] {
-  font-size: 28px;
-}
 .text-\[2vh\] {
   font-size: 2vh;
-}
-.text-\[30px\] {
-  font-size: 30px;
 }
 .text-\[3vh\] {
   font-size: 3vh;
 }
 .text-\[4vh\] {
   font-size: 4vh;
+}
+.text-\[8vw\] {
+  font-size: 8vw;
 }
 .font-bold {
   font-weight: 700;
@@ -11632,6 +11644,10 @@ video {
 .text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 .text-red-500 {
   --tw-text-opacity: 1;
@@ -11672,6 +11688,10 @@ video {
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.drop-shadow-2xl {
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -11688,6 +11708,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
+.hover\:border-green-700:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(21 128 61 / var(--tw-border-opacity));
+}
 .hover\:border-red-400:hover {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
@@ -11699,6 +11723,14 @@ video {
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
@@ -11712,56 +11744,11 @@ video {
 }
 @media (min-width: 0px) {
 
-  .sp\:my-\[30px\] {
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-
-  .sp\:mt-\[10px\] {
-    margin-top: 10px;
-  }
-
-  .sp\:mt-\[30\%\] {
-    margin-top: 30%;
-  }
-
-  .sp\:flex-col {
-    flex-direction: column;
-  }
-
-  .sp\:items-center {
-    align-items: center;
-  }
-
   .sp\:text-\[30px\] {
     font-size: 30px;
   }
 }
 @media (min-width: 897px) {
-
-  .desktop\:mt-\[120px\] {
-    margin-top: 120px;
-  }
-
-  .desktop\:mt-\[40px\] {
-    margin-top: 40px;
-  }
-
-  .desktop\:mt-\[80px\] {
-    margin-top: 80px;
-  }
-
-  .desktop\:flex-row {
-    flex-direction: row;
-  }
-
-  .desktop\:flex-wrap {
-    flex-wrap: wrap;
-  }
-
-  .desktop\:justify-center {
-    justify-content: center;
-  }
 
   .desktop\:text-\[60px\] {
     font-size: 60px;
