--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11270,6 +11270,9 @@ video {
   margin-top: 8vh;
   margin-bottom: 8vh;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -11496,8 +11499,8 @@ video {
 .p-2 {
   padding: 0.5rem;
 }
-.p-4 {
-  padding: 1rem;
+.p-3 {
+  padding: 0.75rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -11534,10 +11537,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.py-\[10px\] {
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 .py-\[1vh\] {
   padding-top: 1vh;
@@ -11584,17 +11583,14 @@ video {
 .pl-\[5vw\] {
   padding-left: 5vw;
 }
+.pt-\[1\.5vh\] {
+  padding-top: 1.5vh;
+}
 .pt-\[1vh\] {
   padding-top: 1vh;
 }
-.pt-\[2vh\] {
-  padding-top: 2vh;
-}
 .pt-\[3vh\] {
   padding-top: 3vh;
-}
-.pt-\[4vh\] {
-  padding-top: 4vh;
 }
 .text-left {
   text-align: left;
