--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11246,6 +11246,24 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.fixed {
+  position: fixed;
+}
+.absolute {
+  position: absolute;
+}
+.relative {
+  position: relative;
+}
+.inset-0 {
+  inset: 0px;
+}
+.right-\[1vh\] {
+  right: 1vh;
+}
+.top-\[1vh\] {
+  top: 1vh;
+}
 .mx-\[3vw\] {
   margin-left: 3vw;
   margin-right: 3vw;
@@ -11253,6 +11271,10 @@ video {
 .mx-\[5vw\] {
   margin-left: 5vw;
   margin-right: 5vw;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 .my-0 {
   margin-top: 0px;
@@ -11279,6 +11301,9 @@ video {
 .mb-\[15vh\] {
   margin-bottom: 15vh;
 }
+.mb-\[1vh\] {
+  margin-bottom: 1vh;
+}
 .mb-\[20px\] {
   margin-bottom: 20px;
 }
@@ -11297,8 +11322,14 @@ video {
 .mr-\[8vw\] {
   margin-right: 8vw;
 }
+.mt-2 {
+  margin-top: 0.5rem;
+}
 .mt-\[12vh\] {
   margin-top: 12vh;
+}
+.mt-\[2vh\] {
+  margin-top: 2vh;
 }
 .mt-\[3vh\] {
   margin-top: 3vh;
@@ -11330,6 +11361,9 @@ video {
 .h-\[20vh\] {
   height: 20vh;
 }
+.h-\[3\.5vh\] {
+  height: 3.5vh;
+}
 .h-\[40vw\] {
   height: 40vw;
 }
@@ -11341,6 +11375,9 @@ video {
 }
 .h-\[92vh\] {
   height: 92vh;
+}
+.h-full {
+  height: 100%;
 }
 .w-\[100\%\] {
   width: 100%;
@@ -11363,6 +11400,9 @@ video {
 .w-\[16vh\] {
   width: 16vh;
 }
+.w-\[3\.5vh\] {
+  width: 3.5vh;
+}
 .w-\[40vw\] {
   width: 40vw;
 }
@@ -11383,6 +11423,9 @@ video {
 }
 .w-\[95vw\] {
   width: 95vw;
+}
+.w-full {
+  width: 100%;
 }
 .flex-grow {
   flex-grow: 1;
@@ -11431,14 +11474,29 @@ video {
 .overflow-auto {
   overflow: auto;
 }
+.overflow-y-auto {
+  overflow-y: auto;
+}
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-full {
+  border-radius: 9999px;
+}
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .border {
   border-width: 1px;
 }
 .border-\[3px\] {
   border-width: 3px;
+}
+.border-\[4px\] {
+  border-width: 4px;
+}
+.border-\[5px\] {
+  border-width: 5px;
 }
 .border-blue-500 {
   --tw-border-opacity: 1;
@@ -11452,9 +11510,17 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(22 163 74 / var(--tw-border-opacity));
 }
+.border-red-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
 .border-red-600 {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .bg-\[\#A49494\] {
   --tw-bg-opacity: 1;
@@ -11484,6 +11550,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
 .bg-green-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
@@ -11492,9 +11562,16 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 .p-2 {
   padding: 0.5rem;
@@ -11502,9 +11579,16 @@ video {
 .p-3 {
   padding: 0.75rem;
 }
+.p-5 {
+  padding: 1.25rem;
+}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 .px-\[20vw\] {
   padding-left: 20vw;
@@ -11537,6 +11621,10 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .py-\[1vh\] {
   padding-top: 1vh;
@@ -11616,6 +11704,12 @@ video {
 .font-bold {
   font-weight: 700;
 }
+.font-medium {
+  font-weight: 500;
+}
+.leading-6 {
+  line-height: 1.5rem;
+}
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -11623,6 +11717,14 @@ video {
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 .text-green-500 {
   --tw-text-opacity: 1;
@@ -11654,6 +11756,11 @@ video {
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-md {
@@ -11715,6 +11822,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
+.hover\:bg-red-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -11724,6 +11835,19 @@ video {
 }
 .hover\:underline-offset-4:hover {
   text-underline-offset: 4px;
+}
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus\:ring-red-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 }
 @media (min-width: 0px) {
 
