--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11325,6 +11325,9 @@ video {
 .mr-\[10px\] {
   margin-right: 10px;
 }
+.mr-\[5vw\] {
+  margin-right: 5vw;
+}
 .mr-\[8vw\] {
   margin-right: 8vw;
 }
@@ -11424,9 +11427,6 @@ video {
 .w-\[60vw\] {
   width: 60vw;
 }
-.w-\[65vw\] {
-  width: 65vw;
-}
 .w-\[85vw\] {
   width: 85vw;
 }
@@ -11465,6 +11465,9 @@ video {
 }
 .justify-center {
   justify-content: center;
+}
+.justify-between {
+  justify-content: space-between;
 }
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
@@ -11515,6 +11518,10 @@ video {
 }
 .border-\[5px\] {
   border-width: 5px;
+}
+.border-\[\#E76767\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(231 103 103 / var(--tw-border-opacity));
 }
 .border-blue-500 {
   --tw-border-opacity: 1;
@@ -11735,8 +11742,15 @@ video {
 .font-medium {
   font-weight: 500;
 }
+.font-semibold {
+  font-weight: 600;
+}
 .leading-6 {
   line-height: 1.5rem;
+}
+.text-\[\#E76767\] {
+  --tw-text-opacity: 1;
+  color: rgb(231 103 103 / var(--tw-text-opacity));
 }
 .text-blue-500 {
   --tw-text-opacity: 1;
@@ -11773,6 +11787,12 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.underline {
+  text-decoration-line: underline;
+}
+.underline-offset-2 {
+  text-underline-offset: 2px;
 }
 .antialiased {
   -webkit-font-smoothing: antialiased;
